--- a/src/Pages/LoginPage/LoginPage.css
+++ b/src/Pages/LoginPage/LoginPage.css
@@ -1,11 +1,3 @@
-/* Dark Mode Style */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: "SF Pro Display", "Roboto", sans-serif;
-}
-
 body {
   background-color: #0f172a;
   background-image: linear-gradient(135deg, #1d173b 0%, #272669 100%);
@@ -13,33 +5,21 @@ body {
   line-height: 1.5;
   min-height: 100vh;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
-.container {
-  width: 10%;
-  margin:  auto;
-  padding: 0px;
+.loginContainer {
+  width: 400px;
+  padding: 40px;
   background-color: #1e293b;
   border-radius: 8px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-  border: 2px solid #334155; /* Added solid border */
-}
-
-.home-container {
-  width: 100%;
-  margin: 0 auto;
-  margin-left: 30%;
-  padding: 20px;
-  background-color: #1e293b;
-  border-radius: 8px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-  border: 2px solid #334155; /* Added solid border */
+  text-align: center;
 }
 
 h1 {
-  font-size: 2.6rem;
+  font-size: 2rem;
   margin-bottom: 20px;
   color: #f8fafc;
   font-weight: 700;
@@ -49,19 +29,27 @@ h1 {
   background-clip: text;
 }
 
-p {
-  font-size: 1.25rem;
-  margin-bottom: 20px;
-  color: #e2e8f0;
-}
-
-button {
-  padding: 10px 20px;
+input[type="text"],
+input[type="password"] {
+  width: 100%;
+  padding: 15px;
+  margin: 10px 0;
   background-color: #334155;
   border: none;
   border-radius: 8px;
-  font-size: 1.25rem;
   color: #e2e8f0;
+  font-size: 1rem;
+}
+
+button {
+  width: 100%;
+  padding: 15px;
+  margin-top: 20px;
+  background-color: #1e40af;
+  border: none;
+  border-radius: 8px;
+  font-size: 1.2rem;
+  color: white;
   cursor: pointer;
   transition: all 0.2s ease;
 }
@@ -69,4 +57,13 @@ button {
 button:hover {
   background-color: #475569;
   transform: translateY(-2px);
+}
+
+.errorMessage {
+  color: #fecaca;
+  background-color: #450a0a;
+  border-radius: 8px;
+  border-left: 4px solid #ef4444;
+  padding: 10px;
+  margin-top: 20px;
 }
